--- a/Views/Goods/Create.cshtml
+++ b/Views/Goods/Create.cshtml
@@ -13,6 +13,12 @@
         <input asp-for="Count" class="form-control" />
         <span asp-validation-for="Count" class="text-danger"></span>
     </div>
+    <div class="form-group">
+        <label asp-for="ImageSrc" class="control-label"></label>
+        <input asp-for="ImageSrc" class="form-control" />
+        <span asp-validation-for="ImageSrc" class="text-danger"></span>
+    </div>
+
         <div class="form-group">
             <input type="submit" value="Создать" class="btn btn-primary" />
         <a asp-action="Index" class="btn btn-secondary">Назад</a>
