--- a/Views/Goods/Delete.cshtml
+++ b/Views/Goods/Delete.cshtml
@@ -14,6 +14,8 @@
         <dd class="col-sm-10">@Model.Name</dd>
         <dt class="col-sm-2">Количество</dt>
         <dd class="col-sm-10">@Model.Count</dd>
+        <dt class="col-sm-2">Img</dt>
+        <dd class="col-sm-10">@Model.ImageSrc</dd>
     </dl>
 </div>
 
