--- a/Views/Goods/Edit.cshtml
+++ b/Views/Goods/Edit.cshtml
@@ -18,6 +18,11 @@
         <span asp-validation-for="Count" class="text-danger"></span>
     </div>
     <div class="form-group">
+        <label asp-for="ImageSrc" class="control-label"></label>
+        <input asp-for="ImageSrc" class="form-control" />
+        <span asp-validation-for="ImageSrc" class="text-danger"></span>
+    </div>
+    <div class="form-group">
         <input type="submit" value="Сохранить изменения" class="btn btn-primary" />
         <a asp-action="Index" class="btn btn-secondary">Назад</a>
     </div>
