--- a/Views/Goods/Index.cshtml
+++ b/Views/Goods/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@model IEnumerable<LoginRegister.Models.Goods>
 
+<head>
+    <link rel="stylesheet" type="text/css" href="~/css/main.css" />
+</head>
+
 <h1>Список товаров</h1>
 
 <table class="table">
@@ -8,6 +12,7 @@
             <th>Id</th>
             <th>Название</th>
             <th>Количество</th>
+            <th>Фото</th>
             @if (User.Identity.IsAuthenticated)
             {
             <th>Действия</th>
@@ -21,6 +26,7 @@
                 <td>@item.Id</td>
                 <td>@item.Name</td>
                 <td>@item.Count</td>
+                <td><img src="@item.ImageSrc" alt="@item.Name"></img></td>
                 <td>
                     @if (User.IsInRole("Администратор"))
                     {
