--- a/Views/Goods/Index.cshtml
+++ b/Views/Goods/Index.cshtml
@@ -1,10 +1,22 @@
 ﻿@model IEnumerable<LoginRegister.Models.Goods>
+@{
+    var categories = ViewBag.Categories as IEnumerable<LoginRegister.Models.Category>;
+}
 
 <head>
     <link rel="stylesheet" type="text/css" href="~/css/main.css" />
 </head>
 
 <h1>Список товаров</h1>
+
+<label for="categorySelect">Выберите категорию:</label>
+<select id="categorySelect" class="form-select" onchange="filterByCategory(this.value)">
+    <option value="">Все категории</option>
+    @foreach (var category in categories)
+    {
+        <option value="@category.Id">@category.Name</option>
+    }
+</select>
 
 <table class="table">
     <thead>
@@ -15,18 +27,18 @@
             <th>Фото</th>
             @if (User.Identity.IsAuthenticated)
             {
-            <th>Действия</th>
+                <th>Действия</th>
             }
         </tr>
     </thead>
-    <tbody>
+    <tbody id="goodsTableBody">
         @foreach (var item in Model)
         {
-            <tr>
+            <tr data-category-id="@item.CategoryId">
                 <td>@item.Id</td>
                 <td>@item.Name</td>
                 <td>@item.Count</td>
-                <td><img src="@item.ImageSrc" alt="@item.Name"></img></td>
+                <td><img src="@item.ImageSrc" alt="@item.Name" /></td>
                 <td>
                     @if (User.IsInRole("Администратор"))
                     {
@@ -44,7 +56,7 @@
 </table>
 @if (User.IsInRole("Администратор"))
 {
-<a asp-action="Create" class="btn btn-success">Добавить товар</a>
+    <a asp-action="Create" class="btn btn-success">Добавить товар</a>
 }
 
 <script>
@@ -69,5 +81,17 @@
         } else {
             alert('Ошибка при подписке. Попробуйте еще раз.');
         }
+    }
+
+        function filterByCategory(categoryId) {
+        const rows = document.querySelectorAll('#goodsTableBody tr');
+        rows.forEach(row => {
+            const rowCategoryId = row.getAttribute('data-category-id');
+            if (categoryId === "" || rowCategoryId == categoryId) {
+                row.style.display = ''; 
+            } else {
+                row.style.display = 'none'; 
+            }
+        });
     }
 </script>
