--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Mail" asp-action="Index" asp-route-email=@User.Identity.Name>Сообщения</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Messages" asp-action="Index" asp-route-email=@User.Identity.Name>Избранные товары</a>
                             </li>
                             @if (User.IsInRole("Администратор"))
                             {
