--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -7,6 +7,7 @@
         <tr>
             <th>ID</th>
             <th>Название</th>
+            <th>Действия</th>
         </tr>
     </thead>
     <tbody>
@@ -15,7 +16,19 @@
             <tr>
                 <td>@category.Id</td>
                 <td>@category.Name</td>
+                <td>
+                    @if (User.IsInRole("Администратор"))
+                    {
+                        <a asp-action="Edit" asp-route-id="@category.Id" class="btn btn-primary">Редактировать</a>
+                        <a asp-action="Delete" asp-route-id="@category.Id" class="btn btn-danger">Удалить</a>
+                    }
+                </td>
             </tr>
         }
+        
     </tbody>
 </table>
+@if (User.IsInRole("Администратор"))
+{
+    <a asp-action="Create" class="btn btn-success">Добавить категорию</a>
+}
