--- a/Views/Goods/Details.cshtml
+++ b/Views/Goods/Details.cshtml
@@ -3,6 +3,7 @@
 <h1>@Model.Name</h1>
 <p>Количество: @Model.Count</p>
 <img src="@Model.ImageSrc" alt="@Model.Name" />
-<p>Описание: @Model.Category</p>
+<p>Описание: @Model.Category.Name</p>
 <p>Для кого: @Model.Gender</p>
 <p>Размер: @Model.Size<p/>
+<p>Цвет: @Model.Color</p>
