добавление цены в товар

--- a/Views/Goods/Details.cshtml
+++ b/Views/Goods/Details.cshtml
@@ -1,9 +1,10 @@
 ﻿@model LoginRegister.Models.Goods
 
 <h1>@Model.Name</h1>
-<p>Количество: @Model.Count</p>
+@* <p>Количество: @Model.Count</p> *@
 <img src="@Model.ImageSrc" alt="@Model.Name" />
-<p>Описание: @Model.Category.Name</p>
+@* <p>Описание: @Model.Category.Name</p> *@
 <p>Для кого: @Model.Gender</p>
 <p>Размер: @Model.Size<p/>
 <p>Цвет: @Model.Color</p>
+<p>Цена: @Model.Price<p/>
