--- a/Views/Goods/Edit.cshtml
+++ b/Views/Goods/Edit.cshtml
@@ -48,6 +48,11 @@
         <span asp-validation-for="Gender" class="text-danger"></span>
     </div>
     <div class="form-group">
+        <label asp-for="Price" class="control-label"></label>
+        <input asp-for="Price" class="form-control" />
+        <span asp-validation-for="Price" class="text-danger"></span>
+    </div>
+    <div class="form-group">
         <input type="submit" value="Сохранить изменения" class="btn btn-primary" />
         <a asp-action="Index" class="btn btn-secondary">Назад</a>
     </div>
