--- a/Views/Goods/GoodsList.cshtml
+++ b/Views/Goods/GoodsList.cshtml
@@ -7,6 +7,7 @@
         <td>@item.Name</td>
         <td>@item.Count</td>
         <td><img src="@item.ImageSrc" alt="@item.Name" /></td>
+        <td>@item.Price</td>
         <td>
             @if (User.IsInRole("Администратор"))
             {
